--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         <div class="p-8 border-b border-slate-800/50">
             <div class="flex items-center gap-4 mb-4">
                 <div class="w-14 h-14 bg-white/10 rounded-2xl flex items-center justify-center backdrop-blur-md border border-white/20">
-                    <i class="fas fa-microscope text-blue-400 text-2xl"></i>
-                </div>
-                <div>
+    <img src="logo.png" class="w-10 h-10 object-contain" alt="EBM-Agent Logo">
+</div>
                     <h1 class="text-2xl font-bold text-white tracking-tight">EBM-Agent</h1>
                     <p class="text-[10px] text-blue-400 font-bold uppercase tracking-widest">Evidence-Based Medicine</p>
                 </div>
