--- a/index.html
+++ b/index.html
@@ -34,16 +34,11 @@
                     <h1 class="text-2xl font-bold text-white tracking-tight">EBM-Agent</h1>
                     <p class="text-[10px] text-blue-400 font-bold uppercase tracking-widest">Evidence-Based Medicine</p>
                 </div>
-            </div>
-            <p class="text-xs leading-relaxed text-slate-400">
-                基于大规模语言模型的自动化循证医学分析系统，致力于为临床决策提供实时、精准的科研证据支持。
-            </p>
-        </div>
 
         <div class="p-8 space-y-8">
             <section>
                 <h3 class="text-xs font-bold text-white uppercase tracking-widest mb-4 flex items-center gap-2">
-                    <i class="fas fa-bullseye text-blue-500"></i> 项目愿景
+                    <i class="fas fa-bullseye text-blue-500"></i> 医研速递愿景
                 </h3>
                 <div class="bg-blue-500/5 p-4 rounded-xl border border-blue-500/20">
                     <p class="text-xs leading-relaxed italic text-blue-100/80">
