--- a/index.html
+++ b/index.html
@@ -26,30 +26,27 @@
 <body class="bg-[#f8fafc] min-h-screen flex flex-col lg:flex-row text-slate-900">
 
     <aside class="sidebar w-full lg:w-[360px] lg:h-screen lg:sticky lg:top-0 flex flex-col text-slate-300 shadow-2xl shrink-0 custom-scrollbar overflow-y-auto">
-        <div class="p-8 border-b border-slate-800/50">
-            <div class="flex items-center gap-4 mb-4">
-                <div class="w-14 h-14 bg-white/10 rounded-2xl flex items-center justify-center backdrop-blur-md border border-white/20">
-                    <img src="logo.png" class="w-10 h-10 object-contain" alt="EBM-Agent Logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
-                    <i class="fas fa-microscope text-blue-400 text-2xl" style="display:none;"></i>
-                </div>
-                <div>
-                    <h1 class="text-2xl font-bold text-white tracking-tight">EBM-Agent</h1>
-                    <p class="text-[10px] text-blue-400 font-bold uppercase tracking-widest">Evidence-Based Medicine</p>
-                </div>
+        <div class="p-10 flex justify-center border-b border-slate-800/50">
+            <div class="w-24 h-24 bg-white rounded-3xl flex items-center justify-center shadow-[0_0_20px_rgba(255,255,255,0.1)] p-2">
+                <img src="logo.png" class="w-20 h-20 object-contain" alt="EBM-Agent Logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <i class="fas fa-microscope text-blue-600 text-4xl" style="display:none;"></i>
             </div>
-            <p class="text-xs leading-relaxed text-slate-400">
-                基于大规模语言模型的自动化循证医学分析系统，致力于为临床决策提供实时、精准的科研证据支持。
-            </p>
         </div>
 
         <div class="p-8 space-y-8">
             <section>
+                <p class="text-xs leading-relaxed text-slate-400 text-center">
+                    基于大规模语言模型的自动化循证医学分析系统，致力于为临床决策提供实时、精准的科研证据支持。
+                </p>
+            </section>
+
+            <section>
                 <h3 class="text-xs font-bold text-white uppercase tracking-widest mb-4 flex items-center gap-2">
                     <i class="fas fa-bullseye text-blue-500"></i> 医研速递愿景
                 </h3>
-                <div class="bg-blue-500/5 p-4 rounded-xl border border-blue-500/20">
-                    <p class="text-xs leading-relaxed italic text-blue-100/80">
-                        "在海量医学文献中精准捕捉科研脉搏，通过 AI 解析让每一份简报都具备改变临床实践的潜力。"
+                <div class="bg-blue-500/5 p-4 rounded-xl border border-blue-500/20 text-center">
+                    <p class="text-xs leading-relaxed italic text-blue-100/80 px-2">
+                        "在海量医学文献中精准捕捉科研脉搏，让每一份简报都具备改变临床实践的潜力。"
                     </p>
                 </div>
             </section>
@@ -58,14 +55,14 @@
                 <h3 class="text-xs font-bold text-white uppercase tracking-widest mb-4 flex items-center gap-2">
                     <i class="fas fa-rss text-blue-500"></i> 每日科研速递
                 </h3>
-                <div class="space-y-3">
+                <div class="space-y-4">
                     <div class="flex gap-3">
                         <i class="fas fa-check-circle text-blue-500 mt-1"></i>
-                        <p class="text-xs text-slate-400"><strong class="text-slate-200">领域定制：</strong>针对您关注的特定医学领域，每日自动检索 PubMed 最新成果。</p>
+                        <p class="text-xs text-slate-400"><strong class="text-slate-200">领域定制：</strong>针对您关注的特定医学领域，每日自动检索最新成果。</p>
                     </div>
                     <div class="flex gap-3">
                         <i class="fas fa-check-circle text-blue-500 mt-1"></i>
-                        <p class="text-xs text-slate-400"><strong class="text-slate-200">临床转化：</strong>不只是翻译，AI 深度解读研究的临床痛点与应用价值。</p>
+                        <p class="text-xs text-slate-400"><strong class="text-slate-200">临床转化：</strong>AI 深度解读研究的临床痛点与应用价值。</p>
                     </div>
                 </div>
             </section>
@@ -75,14 +72,14 @@
                     <i class="fas fa-users text-blue-500"></i> 团队成员
                 </h3>
                 <div class="flex flex-wrap gap-2">
-                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10 hover:bg-white/10">刘一帆</span>
-                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10 hover:bg-white/10">黄欣怡</span>
-                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10 hover:bg-white/10">陈彦冰</span>
-                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10 hover:bg-white/10">何学为</span>
-                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10 hover:bg-white/10">林思扬</span>
-                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10 hover:bg-white/10">苏鸿恩</span>
-                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10 hover:bg-white/10">江晨凯</span>
-                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10 hover:bg-white/10">李陈汐</span>
+                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10">刘一帆</span>
+                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10">黄欣怡</span>
+                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10">陈彦冰</span>
+                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10">何学为</span>
+                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10">林思扬</span>
+                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10">苏鸿恩</span>
+                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10">江晨凯</span>
+                    <span class="px-2 py-1 bg-white/5 rounded text-[11px] border border-white/10">李陈汐</span>
                 </div>
             </section>
 
@@ -91,15 +88,15 @@
                     <i class="fas fa-user-graduate text-blue-500"></i> 指导老师
                 </h3>
                 <div class="flex flex-wrap gap-2 text-slate-400">
-                    <span class="text-[11px] hover:text-white transition-colors cursor-default">庄源东</span>
-                    <span class="text-[11px] hover:text-white transition-colors cursor-default">/ 罗道枢</span>
-                    <span class="text-[11px] hover:text-white transition-colors cursor-default">/ 赵江杰</span>
-                    <span class="text-[11px] hover:text-white transition-colors cursor-default">/ 蔡兆霖</span>
-                    <span class="text-[11px] hover:text-white transition-colors cursor-default">/ 翟广涛</span>
+                    <span class="text-[11px]">庄源东</span>
+                    <span class="text-[11px]">/ 罗道枢</span>
+                    <span class="text-[11px]">/ 赵江杰</span>
+                    <span class="text-[11px]">/ 蔡兆霖</span>
+                    <span class="text-[11px]">/ 翟广涛</span>
                 </div>
             </section>
 
-            <div class="pt-6">
+            <div class="pt-6 border-t border-slate-800/50">
                 <div id="sync-status" class="flex items-center gap-2 text-[10px] text-slate-500 font-bold uppercase tracking-widest">
                     <span class="status-pulse">系统就绪</span>
                 </div>
@@ -144,7 +141,7 @@
             userTag.innerText = `ID: ${userId.substring(0, 12)}...`;
 
             try {
-                // 动态获取对应的 JSON 数据文件
+                // 读取 GitHub 仓库 data 文件夹下的 JSON 文件
                 const response = await fetch(`./data/data_${userId}.json?cb=${new Date().getTime()}`);
                 if (!response.ok) throw new Error('DATA_NOT_FOUND');
                 
@@ -160,8 +157,8 @@
                                 ${item.chinese_title || item.original_title}
                             </h3>
                             <div class="flex lg:flex-col items-end gap-2 lg:gap-0">
-                                <span class="text-[10px] font-black text-slate-300 uppercase tracking-tighter">Publish Date</span>
-                                <span class="text-sm font-bold text-blue-600">${item.publish_date || '2026-02'}</span>
+                                <span class="text-[10px] font-black text-slate-300 uppercase tracking-tighter text-right">Publish Date</span>
+                                <span class="text-sm font-bold text-blue-600 text-right">${item.publish_date || '2026-02'}</span>
                             </div>
                         </div>
 
